# tangle

./: .bot_directives  .gitignore  .gitlab-ci.yml  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AFFIRMATION.adoc  AI.a2ml  AI.djot  ASSUMPTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLAINME.adoc  Justfile  PROOF-NARRATIVE.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README-jtv.adoc  README.adoc  ROADMAP.adoc  SECURITY.md  SONNET-TASKS.md  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.claude/hooks/: session-start.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  dogfood-gate.yml  governance.yml  hypatia-scan.yml  instant-sync.yml  jekyll-gh-pages.yml  jekyll.yml  lean-proofs.yml  mirror.yml  pages.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml
.machine_readable/: ADJUST.contractile  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/bot_directives/: README.adoc  tangle.directives.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/svc/: README.adoc
.well-known/: security.txt
bench/: bench_lexer.ml  bench_lexer.rs  bench_parser.ml  bench_parser_rust.rs  bench_sigma_ops.rs
compiler/: dune-project
compiler/fuzz/: fuzz_lexer.ml  fuzz_parser.ml
compiler/lib/: ast.ml  braid_equiv.ml  braid_equiv.mli  check.ml  check.mli  compositional.ml  compositional.mli  dialect_vk.ml  dialect_vk.mli  dune  eval.ml  lexer.mll  parser.mly  pretty.ml  repl.ml  token.ml  typecheck.ml
compiler/tangle-lsp/: Cargo.toml
compiler/tangle-lsp/docs/: lsp-diagnostic-categories.md
compiler/tangle-lsp/src/: backend.rs  main.rs
compiler/tangle-wasm/: Cargo.toml
compiler/tangle-wasm/src/: lib.rs
compiler/tangle-wasm/tests/: differential.rs
compiler/test/: dune  test_check.ml  test_compositional.ml  test_e2e.ml  test_eval.ml  test_parser.ml  test_property.ml  test_roundtrip.ml  test_typecheck.ml
compiler/test/tg3/: dune  tg3_emit.ml
compiler/test/tg5/: dune  tg5_invariants.ml
compiler/test/tg7/: dune  tg7_braid_equiv.ml
compiler/test/tg8/: dune  tg8_conservativity.ml
conformance/: run_conformance.sh
conformance/invalid/: i01_missing_end.tangle  i02_bad_generator.tangle  i03_unclosed_braid.tangle
conformance/valid/: v01_def.tangle  v02_weave.tangle  v03_compute.tangle  v04_braid.tangle  v05_match.tangle  v06_let.tangle  v07_pipeline.tangle  v08_crossing.tangle  v09_twist.tangle  v10_assert.tangle  v11_add_block.tangle  v12_weave_expr.tangle  v13_recursive_match.tangle  v14_simplify.tangle  v15_tensor.tangle  v16_close_mirror_reverse.tangle
contractiles/: README.adoc
contractiles/intend/: Intentfile.a2ml
contractiles/trust/: Trustfile.a2ml
dialects/: README.md
dialects/braid-calculus/: README.md  grammar-sketch.ebnf
dialects/quantum-circuit/: README.md  grammar-sketch.ebnf
dialects/skein-algebra/: README.md  grammar-sketch.ebnf
dialects/string-diagram/: README.md  grammar-sketch.ebnf
dialects/virtual-knot/: README.md  grammar-sketch.ebnf
docs/: PROOF-REGRESSION-WORKFLOW.adoc  echo-types-ocaml-pipeline.md  krl_map.html  tech-debt-2026-05-26.md
docs/identity-fabric/: musts-intends-wishes.adoc
docs/spec/: DECISIONS-LOCKED.md  ECHO-TANGLEIR-THREADING.md  FEATURE-COVERAGE.md  FORMAL-SEMANTICS.md  UNANSWERED-QUESTIONS.md
editors/: tangle.tmLanguage.json
examples/: braids_as_data.tangle  compositional_pd.tangle  echo_pd.tangle  isotopy.tangle  tensor_product.tangle  trefoil.tangle  turing_complete.tangle
ffi/zig/: build.zig
ffi/zig/src/: main.zig
ffi/zig/test/: integration_test.zig
lib/: stdlib.tangle
playground/: README.md
playground/examples/: figure_eight.tangle  trefoil.tangle
playground/public/: index.html
proofs/: README.md  TG3-REFINEMENT.md  TG3Differential.lean  Tangle.lean  bootstrap-lean.sh  check-tg3-differential.sh
spec/: README.adoc  grammar.ebnf
src/: tangle-jtv.ebnf  tangle.ebnf
src/rust/: Cargo.toml
src/rust/fuzz/: Cargo.toml
src/rust/fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
src/rust/src/: ast.rs  ast_jtv.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_jtv.rs  sexpr.rs
verification/: README.adoc  conformance  fuzzing  tests
