# SPDX-License-Identifier: MPL-2.0
# tangle-lsp — Language Server Protocol implementation for the Tangle
# topological braid language.

[package]
name = "tangle-lsp"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "LSP server for the Tangle topological braid language"
repository = "https://github.com/hyperpolymath/nextgen-languages"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]

[[bin]]
name = "tangle-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
