# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "tangle-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly backend for Tangle — compiles braid operations to WASM"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/nextgen-languages"

[dependencies]
wasm-encoder = "0.225"
thiserror = "2"

[dev-dependencies]
