# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "tangle-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly backend for Tangle — compiles braid operations to WASM"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/nextgen-languages"

[dependencies]
wasm-encoder = "0.225"
thiserror = "2"

[dev-dependencies]
# TG-6 differential rung: a pure-Rust wasm interpreter to EXECUTE the generated
# modules and check they preserve the braid strand-permutation semantics.
# Test-only; the shipped backend keeps no runtime dependency.
wasmi = "0.51"
