; SPDX-License-Identifier: MPL-2.0
; TG-3 translation-validation harness.
;   dune runtest  -> runs ./tg3_emit.exe --check (OCaml-side invariants).
; Regenerate the Lean obligation file (machine-checked half) with:
;   dune exec ./test/tg3/tg3_emit.exe -- --emit <abs>/proofs/TG3Differential.lean
; then verify it with proofs/check-tg3-differential.sh.

(executable
 (name tg3_emit)
 (modules tg3_emit)
 (libraries tangle))

(rule
 (alias runtest)
 (deps tg3_emit.exe)
 (action (run ./tg3_emit.exe --check)))
