# SPDX-License-Identifier: PMPL-1.0-or-later
# Fuzz testing for the Tangle (Rust) lexer and parser

[package]
name = "tanglec-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tanglec = { path = ".." }

# Prevent this from interfering with the workspace
[workspace]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
